--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           # Note: tags has to be all lower-case
-          tags: ghcr.io/yltaros/portfolio/v1.0.0:latest
+          tags: ghcr.io/yltaros/portfolio:v1.0.0
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
 
