--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Build image and push to Docker Hub and GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
+          platforms: linux/amd64,linux/arm64
           # Note: tags has to be all lower-case
           tags: ghcr.io/yltaros/portfolio:v1.0.0
           # build on feature branches, push only on main branch
