--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.0.32",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
