--- a/nginx.conf
+++ b/nginx.conf
@@ -1,46 +1,15 @@
-events {
-    worker_connections  1024;
-    use epoll;
-}
+worker_processes 4;
 
-pid     /tmp/nginx.pid;
+events { worker_connections 1024; }
 
 http {
-    client_body_temp_path   /tmp/client_temp;
-    proxy_temp_path         /tmp/proxy_temp_path;
-    fastcgi_temp_path       /tmp/fastcgi_temp;
-    uwsgi_temp_path         /tmp/uwsgi_temp;
-    scgi_temp_path          /tmp/scgi_temp;
-
     server {
-        listen       80;
-        root /usr/share/nginx/html;
+        listen 80;
+        root  /usr/share/nginx/html;
+        include /etc/nginx/mime.types;
 
         location / {
-            try_files $uri $uri/ /index.html;
-        }
-
-        location ~* \.(css|js)$ {
-            if ($request_filename ~* \.(css)$) {
-                add_header Content-Type "text/css";
-            }
-            if ($request_filename ~* \.(js)$) {
-                add_header Content-Type "application/javascript";
-            }
-            if ($request_filename ~* \.(svg)$) {
-                add_header Content-Type "image/svg+xml";
-            }
-        }
-
-        location ~* \.(svg)$ {
-            add_header Content-Type "image/svg+xml";
-        }
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
+            try_files $uri /index.html;
         }
     }
 }
